# mass2

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  VERSIONS.md  conftest.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  search.html  sitemap.xml
.github/workflows/: python-app.yml
LJHfiles/: index.html
about/: index.html
demo_plot/: index.html
doc/: .gitignore  conf.py  filtering.rst  fluorescence.md  hci_lines_from_asd.rst  index.rst  line_fitting.rst  make_logo.py  xray_efficiency_models.rst
docs/: LJHfiles.md  about.md  demo_plot.md  docstrings.md  docstrings2.md  filtering.md  fluorescence.md  getting_started.md  hci_lines_from_asd.md  index.md  line_fitting.md  line_fitting.rst  make_logo.py  tests.md  xray_efficiency_models.md
docstrings/: index.html
docstrings2/: index.html
examples/: __250804_Pu239_Co57_BLANK.py  __250804_Pu239_Co57_am243_20um.py  __250804_Pu239_Co57_am243_weekend.py  bessy_20240727.py  broken_notebook.py  ebit_july2024_from_off.py  f3db_sweep_example.py  gamma_20241005.py  ljh_miniebit_raven_v1.py  ljh_mnkalpha.py  npy_data_noise_limited_optical_tes.py  parquet_after_ljh_mnkalpha.py  test_examples.py  truqbq_from_parquet_202508.py
examples/broken/: 240706_GDES001.py  _240802_am243_weekend.py  ebit_july2024_from_off.py  ebit_july2024_mass_off.py  off_ebit.py  parquet_after_ljh_mnkalpha.py  pax_20250428.py
examples/truebq_from_parquet_data/: truqbq from parquet 202508.py
filtering/: index.html
fluorescence/: index.html
getting_started/: index.html
hci_lines_from_asd/: index.html
line_fitting/: index.html
mass/calibration/: algorithms.py  hci_models.py
mass/core/: __init__.py  analysis_algorithms.py  phase_correct.py
mass/moss/: ljhfiles.py
mass2/: __init__.py  common.py
mass2/calibration/: __init__.py  algorithms.py  energy_calibration.py  fluorescence_lines.py  hci_lines.py  hci_models.py  import_asd.py  line_models.py  nist_xray_database.py
mass2/core/: __init__.py  analysis_algorithms.py  cal_steps.py  channel.py  channel_summarize.py  channels.py  drift_correction.py  experiment_state.py  filter_steps.py  filters.py  ljhfiles.py  ljhutil.py  mass2main.py  mass2notebook.py  mass_add_lines_truebq.py  mc2.py  message_logging.py  misc.py  moss_phase_correct.py  multifit.py  noise_algorithms.py  noise_channel.py  noise_plot_example.py  offfiles.py  optimal_filtering.py  parquet_cache.py  phase_correct.py  phase_correct_steps.py  projectors_script.py  pulse_algorithms.py  pulse_model.py  recipe.py  rough_cal.py  time_algorithms.py  truebq_bin.py  utilities.py
mass2/data/: fluorescence_line_references.yaml  notebook_starter_template.py
mass2/materials/: __init__.py  efficiency_models.py  uncertainties_helpers.py
mass2/mathstat/: __init__.py  derivative.py  entropy.py  fitting.py  gcss.py  interpolate.py  power_spectrum.py  robust.py  special.py  toeplitz.py  utilities.py
mass2/moss/: README.md  __init__.py  cal_steps.py  channel.py  channels.py  drift_correction.py  filters.py  ljhfiles.py  ljhutil.py  mass_add_lines_truebq.py  misc.py  multifit.py  mypy.ini  noise_algorithms.py  noise_channel.py  noise_plot_example.py  old__init__.py  phase_correct.py  pulse_algorithms.py  pyproject.toml  python-app.yml  rough_cal.py  test_multifit.py  test_rough_cal.py  test_stuff.py  truebq_bin.py
search/: search_index.json
tests/: index.html  regression_test_data.parquet  test_common.py  test_efficiency_models.py  test_mkdocs.py  test_regression.py
tests/calibration/: test_algorithms.py  test_calibration.py  test_fits.py  test_hci_models.py  test_lines.py
tests/core/: test_analysis_algorithms.py  test_channels.py  test_driftcorrect.py  test_ext_trigger.py  test_filtering.py  test_flux_jump_correction.py  test_ljhfile.py  test_ljhutil.py  test_multifit.py  test_parquet_cache.py  test_phase_correct.py  test_pulse_algorithms.py  test_rough_cal.py  test_stuff.py  test_time_drift_correction.py  test_transformed_raw.py  test_truebq_bin.py
tests/core/ljh_example_headers/: 2011_09_12_A_chan1.ljh  20150527_104651_chan85.ljh  20180425_B_chan99.ljh
tests/core/parquets/: dc_test_from_bens_data_20260209.parquet
tests/mathstat/: benchmark_toeplitz.py  test_bugpatching.py  test_entropy.py  test_fitting.py  test_gcss.py  test_interpolation.py  test_power_spectrum.py  test_robust.py  test_special.py  test_toeplitz.py  test_utilities.py
xray_efficiency_models/: index.html
