[project]
name = "mass2"
dynamic = ["version"]
description = "Microcalorimeter Analysis Software Suite, version 2"
authors = [
    {name = "Joe Fowler", email = "drjoefowler@gmail.com"},
    {name = "Galen O'Neil", email = "ggggggggg@github.com"},
]

requires-python = ">=3.8"
readme = "README.md"
license = "MIT"
keywords = ["mass", "dastard", "microcalorimeter"]

dependencies = [
    "deprecation",
    "dill",
    "fastdtw",
    "h5py>=2.7",
    "indexedproperty",
    "lmfit>=0.9.11",
    "matplotlib>1.5",
    "numba",
    "numpy>=1.14, <2.2",
    "packaging",
    "pre-commit",
    "progress",
    "pyyaml",
    "scikit-learn",
    # Bitbucket pipeline tests failed with scipy-1.11.2 but passed with 1.11.1 and 1.11.3. Just require 1.12+
    "scipy>=1.12",
    "uncertainties",
    "xraydb",
]

[dependency-groups]
# Use `uv sync --dev` to get the development packages
dev = [
    "pytest",
    "ruff",
    "flake8",
]
# Use `uv sync --group docs` to get the packages needed to create documentation
docs = [
    "sphinx",
    "recommonmark",
]

[project.urls]
Repository = "https://github.com/usnistgov/mass2.git"
Issues = "https://github.com/usnistgov/mass2/issues"

[project.scripts]
ljh_truncate = "mass2.ljh_truncate:main"
ljh2off = "mass2.core.ljh2off:main"
make_projectors = "mass2.core.projectors_script:main"


[build-system]
requires = ["setuptools>=61", "setuptools_scm>=8", "wheel", "numpy>=1.14"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
mass2 = [
    "bin/ljh_truncate",
    "calibration/nist_xray_data.dat",
    "calibration/low_z_xray_data.dat",
    "calibration/nist_asd_2023.pickle.gz",
]

[tool.setuptools_scm]
version_file = "mass2/_version.py"

[tool.mypy]
disable_error_code = ["import-untyped"]
