[project]
name = "mass2"
dynamic = ["version"]
description = "Microcalorimeter Analysis Software Suite, version 2"
authors = [
    {name = "Joe Fowler", email = "drjoefowler@gmail.com"},
    {name = "Galen O'Neil", email = "ggggggggg@github.com"},
]

requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = ["mass", "dastard", "microcalorimeter"]

dependencies = [
    "deprecation",
    "dill",
    "fastdtw",
    "h5py>=2.7",
    "indexedproperty",
    "lmfit>=0.9.11",
    "marimo",
    "matplotlib>1.5",
    "numba",
    "numpy>=1.14, <2.2",
    "packaging",
    "polars",
    "progress",
    "pulsedata @ git+https://github.com/ggggggggg/pulsedata#egg=pulsedata",
    "pyqt5",
    "pyyaml",
    "scikit-learn",
    # Bitbucket pipeline tests failed with scipy-1.11.2 but passed with 1.11.1 and 1.11.3. Just require 1.12+
    "scipy>=1.12",
    "tornado",  # for matplotlib plots in Marimo
    "uncertainties",
    "xraydb",
]

[dependency-groups]
# Use `uv sync --dev` to get the development packages
dev = [
    "pytest",
    "ruff",
    "flake8",
    "pre-commit",
    "tox",
]
# Use `uv sync --group docs` to get the packages needed to create documentation
docs = [
    "mkdocs",
    "mkdocstrings[python]>=0.18",
]

[project.urls]
Repository = "https://github.com/usnistgov/mass2.git"
Issues = "https://github.com/usnistgov/mass2/issues"

[project.scripts]
ljh_merge = "mass2.core.ljhutil:main_ljh_merge"
ljh_truncate = "mass2.core.ljhutil:main_ljh_truncate"
mass2 = "mass2.core.mass2main:main"
mass2-nb = "mass2.core.mass2notebook:main"


[build-system]
requires = ["setuptools>=61", "setuptools_scm>=8", "wheel", "numpy>=1.14"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
mass2 = [
    "calibration/nist_xray_data.dat",
    "calibration/low_z_xray_data.dat",
    "calibration/nist_asd_2023.pickle.gz",
]

[tool.setuptools_scm]
version_file = "mass2/_version.py"

[tool.mypy]
disable_error_code = ["import-untyped"]
exclude = [
    "mass2/data/notebook_starter_template.py",
    "mass2/core/mass2main.py",
    "mass2/core/mass2notebook.py"
    ]
